# cg

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  build.bat
app/: CMakeLists.txt  main.c
include/cg/: Game.h  core.h  game.h
include/cg/core/: Env.h  Log.h  String.h  assert.h  counter.h  env.h  log.h  memory.h  prim.h  string.h  util.h  utils.h
include/cg/game/: life_cycle.h  lifecycle.h
include/cg/platform/core/: log.h  memory.h
src/: CMakeLists.txt  cg.c
src/core/: CMakeLists.txt  Log.c  Memory.c  String.c  core.h  log.c  log.h  memory.c  string.c  string.h  types.h  utils.h
src/core/platform/: log.h  memory.h
src/core/platform/macos/: CMakeLists.txt  Utils.c  counter.c  log.c  utils.c
src/core/platform/macos/core/: log.c
src/core/platform/windows/: CMakeLists.txt  Log.c  Utils.c  counter.c  log.c  utils.c
src/game/: CMakeLists.txt  Game.c  Game.h  game.c  game.h  main.c
src/game/platform/macos/: CMakeLists.txt  Game.m  game.m
src/game/platform/windows/: CMakeLists.txt  Game.c  game.c
src/platform/: CMakeLists.txt  platform.h
src/platform/macos/: CMakeLists.txt  entry.m
src/platform/macos/core/: log.c
src/platform/windows/: CMakeLists.txt  entry.c  util.c  utils.c  utils.h
src/platform/windows/core/: log.c
test/core/: CMakeLists.txt  string.c
